fixed menu alignment

--- a/frontend/app/styles/main.css
+++ b/frontend/app/styles/main.css
@@ -68,7 +68,8 @@ ol
 
 .help
 {
-    cursor:help
+    cursor:help;
+text-align: left
 }
 .title-inspiration
 {
